syntax = "proto3";

package calculator;



option go_package ="grpc-practice/calculator/proto";

import "avg.proto";
import "maxNum.proto";
import "sqrt.proto";

message CalculatorRequest{
    int32 first_num=1;
    int32 second_num=2;
}

message CalculatorResponce{
    int32 sum=1;
}


service CalculatorService{
    rpc Calculate (CalculatorRequest) returns (CalculatorResponce);
    rpc Avg(stream AvgRequest) returns (AvgResponce);
    rpc Max(stream MaxRequest) returns (stream MaxResponce);
    rpc Sqrt(SqrtRequest) returns (SqrtResponce);
}


